trustfall_core/test_data/tests/parse_errors/directive_on_root.parse-error.ron
Err(DirectiveNotInsideQueryRoot("output", Pos(
  line: 3,
  column: 20,
)))
